# jdw-keys-backend

./: AGENTS.md  Cargo.toml  README.md  config.toml
docs/: NCURSES_UI_PLAN.md
src/: config.rs  event_history.rs  event_model.rs  keyboard_model.rs  main.rs  midi_mapping.rs  midi_read_daemon.rs  midi_reading.rs  midi_translation.rs  ncurses_daemon.rs  osc_client.rs  osc_model.rs  state.rs  util.rs
