[package]
name = "jdw-keys-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.3"
midir = "0.10.0"
psg = "1.0.1"
rosc = "0.10.1"
jdw-osc-lib = { git = "https://github.com/estrandv/jdw-osc-lib.git", branch = "master" }
wl-clipboard-rs = "0.8.1"
itertools = "0.13.0"
ringbuf = "0.4.1"
notcurses = "3.5.0"
